@@ -1,7 +1,8 @@
 0.0.13
 ======
 
-TBD
+* Added a CLI command and method to delete cloudspaces for a cloud, and added returns for release runs in a cloudspace, and deleting runs in a cloudspace
+
 
 0.0.12
 ======
